Bug 120362 - Trying to use "Run Macro..." tool when Java is disabled shows a "Libreoffice requires a Java runtime environment (JRE)" warning
Summary: Trying to use "Run Macro..." tool when Java is disabled shows a "Libreoffice ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Java-Runtime-JRE-Warnings
  Show dependency treegraph
 
Reported: 2018-10-06 12:26 UTC by Mike Kaganski
Modified: 2018-10-08 13:03 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2018-10-06 12:26:36 UTC
1. Disable JRE in Options→LibreOffice→Advanced; restart LO
2. Tools→Macros→Run Macro...

Actual: an "Enable JRE?" dialog with "LibreOffice requires a Java runtime environment (JRE) to perform this task. However, use of a JRE has been disabled. Do you want to enable the use of a JRE now?" warning pops up.

Expected: displaying available macros should not give the warning. As user has disabled JRE, it's normal that some script providers are unavailable when creating providers' list in ProviderCache::getAllProviders for cases which don't indicate that it was explicit user's intention to run something Java-dependent.

Tested with Version: 6.1.2.1 (x64)
Build ID: 65905a128db06ba48db947242809d14d3f9a93fe
CPU threads: 12; OS: Windows 10.0; UI render: default; 
Locale: ru-RU (ru_RU); Calc: group threaded

and with Version: 6.2.0.0.alpha0+ (x64)
Build ID: 7d8a756164dda3b5b08eef68a2925fa4704c33ab
CPU threads: 12; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: ru-RU (ru_RU); Calc: threaded
Comment 1 Mike Kaganski 2018-10-06 12:33:36 UTC
https://gerrit.libreoffice.org/61465
Comment 2 Commit Notification 2018-10-08 11:14:35 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b2d156b6ef3845a2f1f390b1c9b7c202187e6b85

tdf#120362: Don't ask user to enable JVM when enumerating scripts

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.